force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/cgcloud__Workflow_State_Transition__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between workflow and the possible workflow state transitions.</description>
    <label>Workflow State Transition</label>
    <nameField>
        <label>Workflow State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>