force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/fields/cgcloud__Event__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Event__c</fullName>
    <description>Event, which triggered the state transition. E.g. &apos;Save&apos;, &apos;Delete&apos;</description>
    <label>Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>