force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/fields/cgcloud__From_Initial_Stage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__From_Initial_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Initial Stage</label>
    <type>Checkbox</type>
</CustomField>