force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/fields/cgcloud__From_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__From_Status__c</fullName>
    <description>Reference to the state valid before the state transition.</description>
    <label>From Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>initial</fullName>
            </value>
            <value>
                <fullName>WorkCompleted</fullName>
            </value>
            <value>
                <fullName>ForApproval</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>HoldBack</fullName>
            </value>
            <value>
                <fullName>normal</fullName>
            </value>
            <value>
                <fullName>final</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>SendFax</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>