force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <label>Workflow</label>
    <referenceTo>cgcloud__Workflow__c</referenceTo>
    <relationshipLabel>Workflow State Transitions</relationshipLabel>
    <relationshipName>Workflow_State_Transitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>