force-app/main/default/objects/cgcloud__Workflow_State_Transition__c/validationRules/cgcloud__Compare_From_Status_To_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Compare_From_Status_To_Status</fullName>
    <active>true</active>
    <description>The From Status and the To Status can&apos;t be the same.</description>
    <errorConditionFormula>TEXT(cgcloud__From_Status__c) = TEXT(cgcloud__To_Status__c)</errorConditionFormula>
    <errorMessage>The From Status and the To Status can&apos;t be the same.</errorMessage>
</ValidationRule>